# harmonica

./: .appveyor.yml  .azure-pipelines.yml  .codacy.yml  .codeclimate.yml  .coveragerc  .flake8  .gitignore  .isort.cfg  .pylintrc  .stickler.yml  .travis.yml  AUTHORS.md  CITATION.rst  CONTRIBUTING.md  LICENSE.txt  MAINTENANCE.md  MANIFEST.in  Makefile  README.md  README.rst  bx.npy  by.npy  bz.npy  environment.yml  filter-test.ipynb  igrf.csv  igrf14-bgs.nc  igrf2.csv  latest  license_notice.py  magnetic-remanence.py  out.py  prism_benchmark.ipy  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-doc.txt  requirements-optional.txt  requirements.txt  script.py  (+3 more)
.github/: ISSUE_TEMPLATE.md  config.yml  environment.yml  zizmor.yml
.github/workflows/: actions.yml  continuous-integration.yml  deploy.yml  docs.yml  publish.yml  pypi.yml  style.yml  test.yml
data/: README.md  britain-magnetic.csv.xz  etopo1-0.5deg.nc.xz  gb-magnetic.csv.xz  geoid-earth-0.5deg.nc.xz  global_gravity_earth.nc  global_gravity_earth.nc.xz  gravity-earth-0.5deg.nc.xz  rio-magnetic.csv.xz  south-africa-gravity.ast.xz  south-africa-topography.nc.xz
data/examples/: README.txt  britain_magnetic.py  earth_geoid.py  earth_gravity.py  earth_topography.py  gb_magnetic.py  gravity_earth.py  rio_magnetic.py  south_africa_gravity.py  south_africa_topography.py  topography_earth.py
dev/: .buildinfo  changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  versions.html
dev/_modules/: harmonica.html  index.html
dev/_sources/: changes.rst  changes.rst.txt  citing.rst  index.rst.txt  install.rst  references.rst  references.rst.txt  sg_execution_times.rst  versions.rst.txt
dev/api/: index.html
dev/gallery/: example.html  gravity_disturbance.html  gravity_disturbance_topofree.html  index.html  isostasy_airy.html  isostatic_moho_airy.html  sg_execution_times.html  upward_derivative.html
dev/sample_data/: britain_magnetic.html  earth_geoid.html  earth_gravity.html  earth_topography.html  index.html  sg_execution_times.html  south_africa_gravity.html  (+1 more)
doc/: Makefile  changes.rst  compatibility.rst  conf.py  index.rst  install.rst  overview.rst  references.rst  sg_execution_times.rst  versions.rst
doc/api/: index.rst
env/: conda-doc-packages.txt  requirements-build.txt  requirements-docs.txt  requirements-style.txt  requirements-tests.txt
examples/: README.txt  derivatives.py  eql_harmonic.py  example.py  forward_gravity_prism.py  forward_prism.py  gravity_disturbance.py  gravity_disturbance_topofree.py  isostasy_airy.py  isostasy_calculation.py  isostasy_pratt.py  isostatic_moho_airy.py  normal_gravity.py  tesseroid.py  upward_derivative.py
harmonica/: __init__.py  _euler_deconvolution.py  _euler_methods.py  _gravity_corrections.py  _isostasy.py  _transformations.py  _utils.py  _version.py  constants.py  coordinates.py  derivatives.py  ellipsoid.py  gravity_corrections.py  gravity_processing.py  io.py  isostasy.py  isostasy_pratt.py  meshes.py  normal_gravity.py  transformations.py  typing.py  version.py
test/: test_dipole.py  test_eq_sources_cartesian.py  test_eq_sources_spherical.py  test_eq_sources_utils.py  test_euler_deconvolution.py  test_euler_methods.py  test_filters.py  test_forward_utils.py  test_gradient_boosted_eqs.py  test_gravity_corrections.py  test_icgem.py  test_igrf.py  test_isostasy.py  test_legendre.py  test_linearity.py  test_oasis.py  test_point_gravity.py  test_prism.py  test_prism_layer.py  test_prism_magnetic.py  test_tesseroid.py  test_tesseroid_layer.py  test_tesseroid_variable_density.py  test_transformations.py  test_utils.py  test_visualizations.py  utils.py
tests/: test_dipole.py  test_eq_sources_utils.py  test_filters.py  test_gradient_boosted_eqs.py  test_icgem.py  test_igrf.py  test_isostasy.py  test_legendre.py  test_oasis.py  test_point_gravity.py  test_prism_layer.py  test_prism_magnetic.py  test_tesseroid.py  test_tesseroid_variable_density.py
tools/: export_requirements.py  license_notice.py
tutorials/: coordinate_systems.py  free-air.ipynb  free_air_correction.py
v0.1.0/: changes.html  citing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
v0.1.0a1/: genindex.html  install.html  objects.inv  py-modindex.html  search.html
v0.2.0/: changes.html  citing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  references.html  search.html
v0.2.1/: .buildinfo  changes.html  citing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
v0.3.2/: changes.html  citing.html  genindex.html  index.html  install.html  py-modindex.html  references.html  search.html  searchindex.js
v0.3.3/: .buildinfo  changes.html  citing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
v0.4.0/: .buildinfo  changes.html  citing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
v0.5.0/: .buildinfo  changes.html  citing.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.5.1/: .buildinfo  changes.html  citing.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.6.0/: .buildinfo  changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.7.0/: .buildinfo  changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  versions.html
(+1320 files in other folders)
