[project]
name = "harmonica"
description = "Forward modeling, inversion, and processing gravity and magnetic data"
dynamic = ["version"]
authors = [
  {name="The Harmonica Developers", email="fatiandoaterra@protonmail.com"},
]
maintainers = [
  {name = "Santiago Soler", email = "santisoler@fastmail.com"}
]
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = ["geoscience", "geophysics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.23",
    "pandas >= 1.4",
    "scipy >= 1.9",
    "scikit-learn >= 1.0",
    "numba >= 0.53",
    "xarray >= 2022.03",
    "verde >= 1.8.1",
    "xrft >= 1.0",
    "choclo >= 0.1",
    "boule >= 0.4.1"
]

[project.urls]
"Documentation" = "https://www.fatiando.org/harmonica"
"Changelog" = "https://www.fatiando.org/harmonica/latest/changes.html"
"Bug Tracker" = "https://github.com/fatiando/harmonica/issues"
"Source Code" = "https://github.com/fatiando/harmonica"

[project.optional-dependencies]
visualizations = ["pyvista>=0.27", "vtk>=9"]
numba_progress = ["numba_progress"]

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=8.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
version_file = "harmonica/_version.py"

[tool.pytest.ini_options]
doctest_optionflags = "NUMBER"
markers = [
    "use_numba: mark test functions that call Numba jitted functions"
]

[tool.burocrata]
notice = '''
# Copyright (c) 2018 The Harmonica Developers.
# Distributed under the terms of the BSD 3-Clause License.
# SPDX-License-Identifier: BSD-3-Clause
#
# This code is part of the Fatiando a Terra project (https://www.fatiando.org)
#'''

[tool.ruff]
line-length = 88
exclude = [
    "doc/_build",
    "doc/gallery",
    "src/choclo/_version.py",
]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "D",        # pydocstyle
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "FURB",     # refurb
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "PYI",      # flake8-pyi
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "ISC001",   # Conflicts with formatter
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "RET504",   # allow variable assignment only for return
  "PT001",    # conventions for parenthesis on pytest.fixture
  "D200",     # allow single line docstrings in their own line
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # disable unused-imports errors on __init__.py
"_kernels.py" = ["ARG001"]  # disable unused arguments in kernel files
"harmonica/tests/**" = [
    "T20", # allow print statements in tests
    "D",   # ignore pydocstyle warnings in tests
    "RUF012", # ignore undecorated mutable class attributes
]
"doc/conf.py" = ["D"]  # ignore pydocstyle warnings in Sphinx config
"doc/**" = [
    "D",     # ignore pydocstyle warnings in docs
    "T20",  # allow print statements in docs
    "B018",  # allow "useless expressions" in docs (display in notebooks)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
