[metadata]
name = harmonica
fullname = Harmonica
description = "Forward modeling, inversion, and processing gravity and magnetic data"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The Harmonica Developers
author_email = fatiandoaterra@protonmail.com
maintainer = "Santiago Soler"
maintainer_email = santiago.r.soler@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.txt
platform = any
keywords = geoscience, geophysics
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
url = https://github.com/fatiando/harmonica
project_urls =
    Documentation = https://www.fatiando.org/harmonica
    Release Notes = https://github.com/fatiando/harmonica/releases
    Bug Tracker = https://github.com/fatiando/harmonica/issues
    Source Code = https://github.com/fatiando/harmonica

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    scipy
    scikit-learn
    numba
    pooch>=0.7.0
    xarray
    verde>=1.5.0

[options.extras_require]
visualizations =
    pyvista
    vtk>=9

[options.package_data]
harmonica.tests = data/*, baseline/*
harmonica.datasets = registry.txt

[flake8]
max-line-length = 88
max-doc-length = 79
ignore =
    # Too many leading '#' for block comment
    E266,
    # Line too long (82 > 79 characters)
    E501,
    # Do not use variables named 'I', 'O', or 'l'
    E741,
    # Line break before binary operator (conflicts with black)
    W503,
exclude =
    .git,
    __pycache__,
    .ipynb_checkpoints,
per-file-ignores =
    # disable unused-imports errors on __init__.py
    __init__.py: F401

# Configure flake8-rst-docstrings
# -------------------------------
# Add some roles used in our docstrings
rst-roles =
    class,
    func,
    mod,
    meth,
    ref,
# Add some directives used in our docstrings
rst-directives =
    pyvista-plot,
# Ignore "Unknown target name" raised on citations
extend-ignore = RST306

# Configure flake8-functions
# --------------------------
# Allow a max of 10 arguments per function
max-parameters-amount = 10
